@@ -1,3 +1,10 @@
+2003-06-26  Brij Bihari Pandey  <fuzzhead012@yahoo.com>
+2003-06-26  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* tests/clock.c (main): Add a fudge factor in case the absolute values
+	from clock() are small, in which case the percentage variation
+	would be large.
+
 2003-06-13  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* tests/clock.c (main): Avoid div-by-zero if mean==0.
